Fixed minus points Fixed display on mobile

--- a/style.css
+++ b/style.css
@@ -6,14 +6,18 @@
   font-family: "Poppins", sans-serif;
 }
 body {
+  margin: 0px;
+  padding: 0px;
+}
+
+#content {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 25px;
+  width: 90rem;
 
-  margin: 0px;
-  padding: 0px;
 }
 
 nav {
